test/sema/inference/type_inference_return.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S { x: number }

fn foo(): number {
  let x;

  return x;

  // CHECK: [[# @LINE + 1 ]]:9: error: expected to assign 'number' but received 'S' instead
  x = S { x: 1 };
}

fn main(): void {}

// CHECK-NOT: {{.*error.*}}
